2001-03-23  Per Bothner  <per@bothner.com>

	* java/lang/natDouble.cc (parseDouble):  Cannot use errno to
	check for errors, since we don't want to throw exception on
	overflow/underflow.  Instead, trim whitespace, and then check that
	_strtod_r uses up all the rest of the string.

	* java/lang/natClass.cc (_Jv_IsAssignableFrom):  Checking the
	ancestors array is invalid for interfaces, so do that *after*
	check that the target type is not an interface.

2000-03-23  Jeff Sturm  <jsturm@one-point.com>

	* prims.cc (_Jv_FindClassFromSignature): Check return of
	recursive call.  Do not abort on invalid signature; return NULL
	instead.

2001-03-22  Tom Tromey  <tromey@redhat.com>

	* jni.cc (_Jv_JNI_GetAnyFieldID): Handle unresolved fields.
	* java/lang/reflect/natField.cc (getType): Use _Jv_ResolveField
	unconditionally.
	* include/jvm.h (_Jv_ResolveField): Declare.
	* include/java-interp.h (_Jv_ResolveField): Don't declare.
	* resolve.cc (_Jv_ResolveField): No longer conditional on
	INTERPRETER.

2001-03-23  Bryce McKinlay  <bryce@albatross.co.nz>

	Fix for PR libgcj/1736. Thanks to Robert Boehne and Alexandre Oliva
	for libtool hacking.
	* Makefile.am (libgcj.la): New explicit rule. Echo the list of objects
	to a temporary file, then invoke libtool with the -objectlist 
	paramater.
	(libgcjx.la): Likewise.
	* Makefile.in: Rebuilt.

2001-03-22  Joerg Brunsmann <joerg_brunsmann@yahoo.de>

	* javax/naming/Context.java (SECURITY_CREDENTIALS): Fix typo.

2001-03-22  Marcus G. Daniels  <mgd@swarm.org>

	* jni.cc (add_char): Handle `.' like `/'.

2001-03-22  Bryce McKinlay  <bryce@albatross.co.nz>

	* java/lang/reflect/Method.java (getExceptionTypes): Call getType() to
	initialize if exception_types is null.
	* java/lang/reflect/Constructor.java: Likewise.
	* java/lang/reflect/natConstructor.cc (getType): Initialize 
	exception_types to an empty Object array.

2001-03-21  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in (GCJFLAGS): Subst.